--- a/css/app.css
+++ b/css/app.css
@@ -1,26 +1,70 @@
 @font-face{
-	font-family: 'hk-bold';;
+	font-family: 'hk-bold';
 	src: url('fonts/hkgrotesk-bold-webfont.woff') format('woff'),
 	     url('fonts/hkgrotesk-bold-webfont.woff2') format('woff')
 }
 
 @font-face{
-	font-family: 'hk-light';;
+	font-family: 'hk-light';
 	src: url('fonts/hkgrotesk-light-webfont.woff') format('woff'),
 	     url('fonts/hkgrotesk-light-webfont.woff2') format('woff')
 }
 
 @font-face{
-	font-family: 'hk-medium';;
+	font-family: 'hk-medium';
 	src: url('fonts/hkgrotesk-medium-webfont.woff') format('woff'),
 	     url('fonts/hkgrotesk-medium-webfont.woff2') format('woff')
 }
 
 @font-face{
-	font-family: 'hk-regular';;
+	font-family: 'hk-regular';
 	src: url('fonts/hkgrotesk-regular-webfont.woff') format('woff'),
 	     url('fonts/hkgrotesk-regular-webfont.woff2') format('woff')
 }
+
+
+[type=color], [type=date], [type=datetime-local], [type=datetime], [type=email], [type=month], [type=number], [type=password], [type=search], [type=tel], [type=text], [type=time], [type=url], [type=week], textarea{
+	border-radius: 6px;
+	height: 2.2rem;
+	margin: 0 0 .5rem;
+}
+
+a, a:hover, a:focus {
+	color: none;
+	outline: none !important;
+}
+
+
+
+
+@media print, screen and (max-width: 59em) {
+	h1{
+		font-size: 2.5em;
+	}
+	#main-content{
+		height: 80%;
+	}
+}
+
+@media print, screen and (max-width: 30em){
+	h1{
+		font-size: 1.9em;
+	}
+	#copy{
+		margin: 0;
+	}
+	.button{
+		margin: 0;
+		width: 100%
+	}
+	#main-content h2{
+		line-height: 1.2em;
+	}
+
+}
+
+
+
 
 footer{
 	padding: 2em 0 1em;
@@ -89,7 +133,10 @@ p{
   font-family: 'hk-regular', helvetica, arial, sans-serif;
   font-size: .9em;
 }
-
+label{
+	color: #383838;
+	font-family: 'hk-bold';
+}
 small{
 	font-weight: 700;
 }
@@ -106,6 +153,7 @@ small{
 
 #benefits-content .b-black{
 	border-color: #EF6954;
+	float: left;
 }
 
 #benefits-content .bg-guitar{
@@ -134,6 +182,7 @@ small{
 	float: none;
 	width: 260px;
 }
+
 
 #faqs-content h4{
 	font-size: 1rem;
@@ -190,7 +239,7 @@ small{
 }
 
 #copy{
-  margin-top: 4em;
+  margin-top: 3em;
 }
 
 #howto-content h2, #stories-content h2, #benefits-content h2, #prices-content h2, #faqs-content h2{
@@ -207,6 +256,40 @@ small{
   position: absolute;
   float: right;
   right: 0;
+}
+
+#Modal{
+	background: #F9FAFB url('../img/bg-modal.svg') no-repeat bottom;
+	border-radius: 10px;
+	box-shadow: 0 9px 10px 0 rgba(0,0,0,0.20);
+
+}
+#Modal h2{
+	font-size: 1rem;
+	margin: 1em 0;
+	font-family: 'hk-regular';
+	line-height: 1.2em;
+}
+
+#Modal .button{
+			margin: 1em auto;
+	    display: block;
+	    width: 100%;
+	    background: #F5B019;
+	    color: #fff;
+			text-transform: uppercase;
+			box-shadow: 0 4px 0 0 #DB9C13;
+}
+#Modal  a{
+	color:#383838;
+}
+#Modal .container{
+	padding: 1em 6em;
+}
+
+#Modal .conditions{
+	font-size: 11px;
+	margin-top: 1em;
 }
 
 #offCanvas{
@@ -237,8 +320,6 @@ small{
 	color: #fff;
 	margin-bottom: 1em;
 }
-
-
 
 #stories-content{
   background: #22252B url('../img/testimoniales.jpg') no-repeat;
@@ -291,6 +372,20 @@ small{
 
 #stories-content .b-black{
 	margin-top: -.5em;
+	float: left;
+}
+
+
+#testimonial .comillas{
+	font-size: 4rem;
+	color: #F5B019;
+	font-family: sans-serif;
+	margin: 0;
+	padding: 0;
+}
+
+#testimonial .testimoniales-textos{
+	margin-top: -2.2em;
 }
 .b-main{
   margin-left: 16px;
@@ -308,9 +403,12 @@ small{
   font-size: 1em ;
 }
 
-.button:hover{
+.button:hover,  .button:focus{
   background:transparent;
+	outline:0;
 }
+
+
 
 .button-down{
 	background: url('../img/button-down.svg') no-repeat;
@@ -325,10 +423,43 @@ small{
 	margin: 0 auto;
 }
 
+.bx-wrapper{position:relative;margin:0 auto 60px;padding:0;*zoom:1;}
+.bx-wrapper img{max-width:100%;display:block;}
+.bx-wrapper .bx-viewport{-moz-box-shadow:0 0 5px #ccc;-webkit-box-shadow:0 0 5px #ccc;box-shadow:0 0 5px #ccc;border:5px solid #fff;left:-5px;background:#fff;-webkit-transform:translatez(0);-moz-transform:translatez(0);-ms-transform:translatez(0);-o-transform:translatez(0);transform:translatez(0);}
+.bx-wrapper .bx-pager,
+.bx-wrapper .bx-controls-auto{position:absolute;bottom:-30px;width:100%;}
+.bx-wrapper .bx-loading{min-height:50px;background:url(../img/bx_loader.gif) center center no-repeat #fff;height:100%;width:100%;position:absolute;top:0;left:0;z-index:2000;}
+.bx-wrapper .bx-pager{text-align:center;font-size:.85em;font-family:Arial;font-weight:bold;color:#666;padding-top:20px;}
+.bx-wrapper .bx-pager .bx-pager-item,
+.bx-wrapper .bx-controls-auto .bx-controls-auto-item{display:inline-block;*zoom:1;*display:inline;}
+.bx-wrapper .bx-pager.bx-default-pager a{background:#666;text-indent:-9999px;display:block;width:10px;height:10px;margin:0 5px;outline:0;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;}
+.bx-wrapper .bx-pager.bx-default-pager a:hover,
+.bx-wrapper .bx-pager.bx-default-pager a.active{background:#000;}
+.bx-wrapper .bx-prev{display: none;}
+.bx-wrapper .bx-next{display: none;}
+.bx-wrapper .bx-prev:hover{background-position:0 0; }
+.bx-wrapper .bx-next:hover{background-position:-43px 0;}
+.bx-wrapper .bx-controls-direction a{position:absolute;top:50%;margin-top:-16px;outline:0;width:32px;height:32px;text-indent:-9999px;z-index:9999;}
+.bx-wrapper .bx-controls-direction a.disabled{display:none;}
+.bx-wrapper .bx-controls-auto{text-align:center;}
+.bx-wrapper .bx-controls-auto .bx-start{display:block;text-indent:-9999px;width:10px;height:11px;outline:0;background:url(../img/controls.png) -86px -11px no-repeat;margin:0 3px;}
+.bx-wrapper .bx-controls-auto .bx-start:hover,
+.bx-wrapper .bx-controls-auto .bx-start.active{background-position:-86px 0;}
+.bx-wrapper .bx-controls-auto .bx-stop{display:block;text-indent:-9999px;width:9px;height:11px;outline:0;background:url(../img/controls.png) -86px -44px no-repeat;margin:0 3px;}
+.bx-wrapper .bx-controls-auto .bx-stop:hover,
+.bx-wrapper .bx-controls-auto .bx-stop.active{background-position:-86px -33px;}
+.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager{text-align:left;width:80%;}
+.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto{right:0;width:35px;}
+.bx-wrapper .bx-caption{position:absolute;bottom:0;left:0;background:#666\9;background:rgba(80, 80, 80, 0.75);width:100%;}
+.bx-wrapper .bx-caption span{color:#fff;font-family:Arial;display:block;font-size:.85em;padding:10px;}
+
+
 .bxslider p{
 	letter-spacing: normal;
 	color: #fff;
-	font-size: 1em;
+	font-size: 1.1em;
+	margin: -3em 0 0 0;
+	line-height: 1.2em;
 }
 
 .bxslider .stars li{
@@ -356,13 +487,18 @@ small{
   background: transparent;
   padding: 1rem 0rem;
 }
-
+.fi-x-circle{
+	font-size: 2em;
+	float: right;
+	color: rgba(56, 56, 56, 0.38);
+}
 .icon-brainsessionshq, .icon-brainsessionsamp{
   display: block;
   text-align: center;
   margin: 0em auto -.1em;
   z-index: 1;
   position: relative;
+
 }
 
 .icon-brainsessionshq{
@@ -449,10 +585,19 @@ small{
 		color: #fff;
 	}
 
+.reveal-overlay{
+	background-color: hsla(0,0%,4%,.75);
+}
+
+.reveal, .reveal:focus{
+		outline:0;
+}
 .small-menu{
 	border: 2px solid #fff;
 	border-radius: 6px;
 }
+
+
 
 
 @media print, screen and (max-width: 59em) {
@@ -488,7 +633,7 @@ small{
 
 @media print, screen and (max-width: 30em){
 	h1{
-		font-size: 2em;
+		font-size: 1.9em;
 	}
 	#copy{
 		margin: 0;
@@ -508,6 +653,7 @@ small{
 	}
 	#stories-content{
 		padding: 1em 0;
+		height: 530px;
 	}
 	#stories-content h2{
 		text-align: center;
@@ -526,7 +672,15 @@ small{
 		line-height: 1.1em;
 	}
 	#stories-content .testimoniales p{
-		font-size: 1.2em;
+		font-size: 1.3em;
 		line-height: 1.2em;
+		margin-top: -3.8em;
+	}
+
+	#Modal{
+		border-radius: 0;
+	}
+	#Modal .container{
+		padding: 0;
 	}
 }
